RESOLVED FIXED49628
Set the original URL for downloads
https://bugs.webkit.org/show_bug.cgi?id=49628
Summary Set the original URL for downloads
Anders Carlsson
Reported 2010-11-16 15:21:11 PST
Set the original URL for downloads
Attachments
Patch (9.95 KB, patch)
2010-11-16 15:27 PST, Anders Carlsson
sullivan: review+
Anders Carlsson
Comment 1 2010-11-16 15:27:50 PST
John Sullivan
Comment 2 2010-11-16 15:46:53 PST
Comment on attachment 74047 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=74047&action=review > WebKit2/WebProcess/Downloads/mac/DownloadMac.mm:68 > +} It's non-obvious why we can get the originating URL from the back/forward list. The old code in WebFrameLoaderClient.mm included a few comments and a FIXME that make this a little clearer. I think it's worthwhile to reproduce those comments and FIXME here. (I see one of them is now in setOriginalURLForDownload, but the others aren't.) It might also help to name this function originatingURLFromBackForwardList, since it's only used when there's no referrer.
Anders Carlsson
Comment 3 2010-11-16 15:53:43 PST
Note You need to log in before you can comment on or make changes to this bug.