Set the original URL for downloads https://bugs.webkit.org/show_bug.cgi?id=49628

Reviewed by John Sullivan.

WebCore:

Export symbols needed by WebKit2.

* WebCore.exp.in:

WebKit2:

* WebProcess/Downloads/DownloadManager.cpp:
(WebKit::DownloadManager::startDownload):
* WebProcess/Downloads/DownloadManager.h:
startDownload now takes the originating web page.

* WebProcess/Downloads/cf/DownloadCFNet.cpp:
(WebKit::Download::start):
start now takes the originating web page.

* WebProcess/Downloads/mac/DownloadMac.mm:
(WebKit::originatingURL):
(WebKit::setOriginalURLForDownload):
Port code over from WebKit1 that sets the download URL.

(WebKit::Download::start):
Call setOriginalURLForDownload.

* WebProcess/Downloads/qt/DownloadQt.cpp:
(WebKit::Download::start):
start now takes the originating web page.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::startDownload):
Pass the web page to DownloadManager::startDownload.

Canonical link: https://commits.webkit.org/62610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72145 268f45cc-cd09-0410-ab3c-d52691b4dbfc