WebKit2/WebProcess/Downloads/Download.h
@@ -48,6 +48,8 @@ namespace WebCore {
 
 namespace WebKit {
 
+class WebPage;
+
 class Download : public CoreIPC::MessageSender<Download> {
     WTF_MAKE_NONCOPYABLE(Download);
 
@@ -59,7 +61,7 @@ public:
     CoreIPC::Connection* connection() const;
     uint64_t destinationID() const { return m_downloadID; }
 
-    void start();
+    void start(WebPage* initiatingWebPage);
 
     void didStart();
     void didReceiveResponse(const WebCore::ResourceResponse&);
