WebKit2/WebProcess/Downloads/DownloadManager.cpp
@@ -43,10 +43,10 @@ DownloadManager::DownloadManager()
 {
 }
 
-void DownloadManager::startDownload(uint64_t downloadID, const ResourceRequest& request)
+void DownloadManager::startDownload(uint64_t downloadID, WebPage* initiatingPage, const ResourceRequest& request)
 {
     OwnPtr<Download> download = Download::create(downloadID, request);
-    download->start();
+    download->start(initiatingPage);
 
     ASSERT(!m_downloads.contains(downloadID));
     m_downloads.set(downloadID, download.leakPtr());
