WebKit2/WebProcess/Downloads/qt/DownloadQt.cpp
@@ -31,7 +31,7 @@ using namespace WebCore;
 
 namespace WebKit {
 
-void Download::start()
+void Download::start(WebPage* initiatingWebPage)
 {
     notImplemented();
 }
