WebKit2/WebProcess/WebPage/WebFrame.cpp
@@ -212,7 +212,7 @@ void WebFrame::startDownload(const WebCore::ResourceRequest& request)
 {
     ASSERT(m_policyDownloadID);
 
-    DownloadManager::shared().startDownload(m_policyDownloadID, request);
+    DownloadManager::shared().startDownload(m_policyDownloadID, page(), request);
 
     m_policyDownloadID = 0;
 }
