third_party/WebKit/WebKit2/WebProcess/Downloads/cf/DownloadCFNet.cpp
@@ -32,7 +32,7 @@ using namespace WebCore;
 
 namespace WebKit {
 
-void Download::start()
+void Download::start(WebPage* initiatingWebPage)
 {
     notImplemented();
 }
